frontend and functional backend for verifying message
