# public/openapi/read/topic/topic_id.yaml
@@ -67,6 +67,10 @@ get:
                           type: number
                         deleted:
                           type: number
+                        verify:
+                          type: number
+                        verifyUid:
+                          type: number
                         upvotes:
                           type: number
                         downvotes:
